Mon Sep  8 17:59:55 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Base_Thread_Adapter.h:
        * ace/CDR_Base.inl:
        * ace/CDR_Base.cpp:
        * ace/ETCL/ETCL_l.cpp:
        * ace/ETCL/ETCL_l.cpp.diff:
        * ace/ETCL/ETCL_y.cpp:
        * ace/ETCL/ETCL_y.cpp.diff:
        * ace/Global_Macros.h:
        * ace/Handle_Set.cpp:
        * ace/OS_NS_stdlib.cpp:
        * ace/OS_NS_string.cpp:
          C++11 deprecated the register keyword, so introduce a new
          ACE_REGISTER define which normall expands to register, but
          to nothing with C++11

Mon Sep  8 15:41:55 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_clang.GNU:
          Added deprecated_declarations, default is 1 and than we just
          let clang show all, with C++11 we set it to 0 to get rid of
          them (if not set by the user)

Mon Sep  8 15:36:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_clang_common.GNU:
          Looks this 'common' file is only used for MacOSX

        * include/makeinclude/platform_linux_clang.GNU:
          Small improvements to only set one C++ flavor

Mon Sep  8 13:30:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Auto_IncDec_T.h:
          Fixed compile error because ACE_Copy_Disabled was implicitly
          pulled in before

Mon Sep  8 13:24:53 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * netsvcs/lib/Log_Message_Receiver.h:
          Fixed compile error because ACE_Copy_Disabled was implicitly
          pulled in before

Mon Sep  8 13:02:34 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_clang_common.GNU:
          Support c++11 as setting and add -Wno-deprecated at that
          moment to the compiler flags

Mon Sep  8 12:38:47 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp: